# zephyr-transit

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  environment.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: project-task.md
.github/workflows/: github-actions.yaml  zephyr_transit_testing.yaml
database/models/: base.py  source.py  station.py
notebooks/: weather_data_environment_data_overview.ipynb
tests/: conftest.py  test_basic.py  test_models.py
tests/zephyr_db/: conftest.py  test_models.py  test_seeding.py
tests/zephyr_etl/: test_api_parser.py  test_loaders.py  test_observation_loader.py
zephyr-db/: database.py
zephyr-db/models/: source.py
zephyr_db/: README.md  __init__.py  alembic.ini  database.py
zephyr_db/migrations/: env.py
zephyr_db/migrations/versions/: 6055c9a20750_added_unique_constraints_to_station_.py  854387812710_added_symbol_column_to_unit.py  8569b692a123_initial_database_schema_migration.py
zephyr_db/models/: __init__.py  observation.py  source.py  station.py  station_variables.py  unit.py  variable.py
zephyr_db/seed/: __init__.py  sources.py  units.py  utils.py  variables.py
zephyr_etl/: __init__.py  observation_loader.py  station_loader.py
zephyr_etl/sources/: co_dot.py
