[project]
name = "zephyr-transit"
version = "0.1.0"
description = "ETL project for extracting wind data from DOT road weather stations"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zephyr_db*", "zephyr_etl*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb"]
extend-exclude = [
    "*/migrations/*",
    "migrations/*",
    "**/migrations/**/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Error, pyflakes, warnings, isort
ignore = [
    "F821",  # Undefined name (for SQLAlchemy string relationships)
]

[tool.ruff.format]
quote-style = "single"
