[project]
name = "zephyr-transit"
version = "0.1.0"
description = "ETL project for extracting wind data from DOT road weather stations"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "tenacity>=9.1.2",
    "pytest>=8.4.1",
    "polars>=1.32.0",
    "requests>=2.32.4",
    "jsonschema>=4.25.0",
    "pytest-env>=1.1.5",
    "ruff>=0.12.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zephyr_db*", "zephyr_etl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "DB_NAME = zephyr_transit_test"
]
addopts = "-m 'not integration'"
markers = [
    "integration: Tests that actually make network requests"
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.ipynb"]
extend-exclude = [
    "*/migrations/*",
    "migrations/*",
    "**/migrations/**/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]  # Error, pyflakes, warnings, isort
ignore = [
    "F821",  # Undefined name (for SQLAlchemy string relationships)
    "D417", # disable documentation on every function parameter
    "D100", #public module docstrings
    "D104", #public package dosctring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
